java17 upgrade (#452)
* adapted occurrence to latest changes in dwc-api

* dwc-api version

* gbif-api version

* dwc-io version

* pom version

* humboldt search + events response

* fixed tests

* sort + nested queries

* changed pom version

* nested facets + refactor

* fixed test

* fixes #423

* using latest query tools

* Update gbif-api.version to 2.1.17-SNAPSHOT

* changes for Humboldt search and downloads

* fix for https://github.com/gbif/pipelines/issues/1210

* updated gbif-api version

* downloads emails adapted for events

* downloads emails adapted for events

* DownloadMetadataBuilder adapted to events

* gbif-api version

* creating HE table in dwca downloads only for events

* fixed rowType HE meta.xml downloads

* adding service to server species multimedia from occurrences

* adding media table configs for testing

* moving occurrence media config out of db config

* removing iterating on splits

* reading multimedia info from json

* lowercasing mediatype

* removing salted key

* using specific gets to avoid using scans

* using the result size as returned limit

* adding missing configs for species media table

* casing the mediatype and checking minimum of numeric parameters

* occurrence extension + interpretedExtensions param

* adapted extensions query DWCA download to use it for events

* update gbif-api version to 2.2.0-SNAPSHOT

* fixing read of total multimedia count

* return empty set for verbatim and interpreted extensions if they are null

* setting missing interpretedExtensions

* renaming speciesKey to taxonKey

* media results put in the results array

* migrate HttpServletRequest import from javax to jakarta

* SearchHitConverter: handle nested paths that contains lists

* updating metastore from the service

* making table metadata update atomic

* merging multimedia species changes from species_multimedia branch

* Support for querying taxonomic issues and fixes for isNull, isNotNull predicates (#438)

* es default checklist